force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hair</fullName>
            </value>
            <value>
                <fullName>Spa</fullName>
            </value>
            <value>
                <fullName>Makeup</fullName>
            </value>
            <value>
                <fullName>Facial</fullName>
            </value>
            <value>
                <fullName>Nails</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>