force-app/main/default/objects/Product2/fields/Service_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Service_Duration_Minutes__c</fullName>
    <label>Service Duration(Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>