force-app/main/default/objects/Product2/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hair Cut</fullName>
            </value>
            <value>
                <fullName>Hair Spa</fullName>
            </value>
            <value>
                <fullName>Hair Coloring</fullName>
            </value>
            <value>
                <fullName>Body Spa</fullName>
            </value>
            <value>
                <fullName>Head Spa</fullName>
            </value>
            <value>
                <fullName>Cleanup</fullName>
            </value>
            <value>
                <fullName>Facial</fullName>
            </value>
            <value>
                <fullName>Makeup 1</fullName>
            </value>
            <value>
                <fullName>Makeup 2</fullName>
            </value>
            <value>
                <fullName>Nails 1</fullName>
            </value>
            <value>
                <fullName>Nails 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>