force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Category__c</columns>
    <columns>Service_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Services</label>
</ListView>